--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         .container {
             max-width: 400px;
             text-align: center;
-            padding-right: 6%;
+            padding: 0;
         }
 
         input {
             margin: 5px 0;
             padding: 10px;
-            width: 100%;
+            width: 90%;
             font-size: 16px;
         }
 
